--- a/argument.yml
+++ b/argument.yml
@@ -11,7 +11,7 @@ z_shift_range: [-0.05, -0.05, -0.05, -0.05]
 traj_types: ['double-straight-line', 'double-straight-line', 'circle', 'circle']
 video_postfix: ['dolly-zoom-in', 'zoom-in', 'circle', 'swing']
 specific: ''
-longer_side_len: 960
+longer_side_len: 1280
 src_folder: image
 depth_folder: depth
 mesh_folder: mesh
@@ -20,7 +20,7 @@ load_ply: False
 save_ply: True
 inference_video: True
 gpu_ids: 0
-offscreen_rendering: False
+offscreen_rendering: True
 img_format: '.jpg'
 depth_format: '.npy'
 require_midas: True
